[project]
name = "us-state-travel-advisories-feeds"
description = "JSON feeds for U.S. Department of State Travel Advisories"
readme = "README.md"
authors = [{name = "Joshua Peek"}]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.1,<9.0",
    "feedparser>=6.0.0,<7.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0,<2.0",
    "ruff>=0.3.0",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
